# expo-rust-ffi-template

./: .gitignore  README.md  app.json  package-lock.json  package.json  post-init.js  template.config.js  tsconfig.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/anonymous/hedgepayexpoapp/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
app/: App.tsx
ios/: Podfile
ios/hedgepayexpoapp/: Info.plist  hedgepayexpoapp.entitlements
ios/hedgepayexpoapp.xcodeproj/: project.pbxproj
ios/hedgepayexpoapp.xcodeproj/xcshareddata/xcschemes/: hedgepayexpoapp.xcscheme
ios/hedgepayexpoapp.xcworkspace/: contents.xcworkspacedata
modules/arithmetic/: expo-module.config.json  index.ts
modules/arithmetic/android/: build.gradle
modules/arithmetic/android/src/main/java/expo/modules/arithmetic/: ArithmeticModule.kt
modules/arithmetic/ios/: Arithmetic.podspec  ArithmeticModule.swift
modules/arithmetic/src/: Arithmetic.types.ts  ArithmeticModule.ts  ArithmeticModule.web.ts
modules/rust_ffi/android/add/src/main/java/add/org/expo/ffi/add/: add.kt
modules/rust_ffi/ios/: RustFFI.podspec
rust_core/: Cargo.toml
rust_core/modules/add/: Cargo.toml  build.rs  uniffi.toml
rust_core/modules/add/src/: add.udl  lib.rs
rust_core/modules/subtract/: Cargo.toml  build.rs  uniffi.toml
rust_core/modules/subtract/src/: lib.rs  subtract.udl
rust_core/uniffi-bindgen/: Cargo.toml
scripts/: build_android.sh  build_ios.sh  clean_generated.sh  cleanup_template.sh
(+1 files in other folders)
