[package]
name = "subtract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "subtract"

[dependencies]
uniffi = { version = "0.29.1", features = ["bindgen", "cli", "scaffolding-ffi-buffer-fns"] }


[build-dependencies]
uniffi = { version = "0.29.1", features = ["build", "scaffolding-ffi-buffer-fns"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }
